--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "leetcode-javascript",
-  "packageManager": "yarn@4.9.1"
+  "packageManager": "yarn@4.9.1",
+  "devDependencies": {
+    "jest": "30.1.3"
+  }
 }
