fix: correct .gitignore entry for yarn.lock and update package.json formatting

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "leetcode-javascript",
   "packageManager": "yarn@4.9.1",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "jest": "30.1.3"
   }
